[tool.poetry]
name = "causal-impact"
version = "0.1.0"
description = ""
authors = ["Miyazaki-Kohei <oyazingi@gmail.com>"]
readme = "README.md"
packages = [{include = "causal_impact"}]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
